refactor(admin): use Math.clamp for audit-log page size (Java 21)
Replace the nested Math.min(MAX, Math.max(1, ...)) page-size clamp with
Java 21's Math.clamp(value, min, max) — same bounds [1, MAX_PAGE_SIZE], clearer
intent. Swept the codebase for the same nested-min/max clamping pattern; this
audit-log page size was the only occurrence (the other Math.max calls —
Math.max(0, page) here and Math.max(1, maxFailedAttempts) in LocalLoginService —
are single-sided floors, not clamps, so left as-is).